[package]
name = "os"
version = "0.1.0"
authors = ["greatoyster <yangjq@shanghaitech.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]


[profile.release]


[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
