[package]
name = "rs-client"
version = "0.1.0"
authors = ["greatoyster <yangjq@shanghaitech.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protoc-grpcio = "1.1.0"
grpc = "0.6.2"
protobuf = "~2"
futures = "~0.1"
futures-cpupool = "~0.1"
lib = "0.0.2"